changed the pic of the second project

--- a/post.html
+++ b/post.html
@@ -47,7 +47,7 @@
 		<br>
 
 		<div class="img-container">
-			<img src="images/dash.jpg">
+			<img src="images/realestate.png">
 		</div>
 		
 		<h3>Laboratory Management System</h3>
@@ -81,23 +81,23 @@
 
 		<h5>Laboratory Admin Dashboard</h5>
 		<div class="img-container">
-			<img src="images/lab-dash.jpg">
+			<img src="images/realestate2.png">
 		</div>
 
 		<h6>Sample ID Form</h5>
 		<div class="img-container">
-			<img src="images/sample-form.jpg">
+			<img src="images/realestate3.png">
 		</div>
 
 		<h5>Results Input Fields</h5>
 		<div class="img-container">
-			<img src="images/results.jpg">
+			<img src="images/realestate4.png">
 		</div>
 
-		<h5>PDF Report (Automaticly Generated)</h5>
+		<!-- <h5>PDF Report (Automaticly Generated)</h5>
 		<div class="img-container">
 			<img src="images/pdf-report.jpg">
-		</div>
+		</div> -->
 
 		<h5>Customer Dashboard</h5>
 		<div class="img-container">
