added my profile image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="images/Dennis.jpg">
+					<img id="profile_pic" src="images/me.jfif">
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
@@ -77,31 +77,28 @@
 
 			<div class="about-wrapper">
 				<div class="about-me">
-					<h4>More about me</h4>
+					<!-- <h4>More about me</h4>
 
-					<p>I build new projects just to tickle my brain and love teaching others how they're made.</p>
-
-					<p>While I keep busy teaching courses, I still take interviews in search of a great team & projects that interest me.</p>
-
-
-					<hr>
+					<p>My last name is makady</p>
+					<hr> --> 
 
 					<h4>TOP EXPERTISE</h4>
 
-					<p>Front-end developer with primary focus on React</p>
-					<a target="_blank" href="resume.pdf">Download Resume</a>
+					<p>Front-end developer with primary focus on React and Next Js.</p>
+					<!-- <a target="_blank" href="resume.pdf">Download Resume</a> -->
 
 					<div id="skills">
 						<ul>
 							<li>JavaScript</li>
 							<li>React js</li>
 							<li>Next js</li>
-							<li>Python</li>
+							<li>Gulp js</li>
 						</ul>
 
 						<ul>
 							<li>HTML/CSS</li>
-							
+							<li>Sass</li>
+							<li>Pug js</li>
 						</ul>
 
 					</div>
@@ -109,14 +106,14 @@
 				</div>
 
 				
-				<div class="social-links">
+				<!-- <div class="social-links">
 					<img id="social_img" src="images/follow.jpg">
 					<h3>Find me on Twitter & Youtube</h3>
 
 					<a target="_blank" href="https://www.youtube.com/c/dennisivy">YouTube: @DennisIvy</a>
 					<br>
 					<a target="_blank" href="https://twitter.com/dennisivy11">Twitter: @DennisIvy11</a>
-				</div>
+				</div> -->
 			</div>
 
 		</div>
