Added soft skills

--- a/index.html
+++ b/index.html
@@ -89,16 +89,19 @@
 
 					<div id="skills">
 						<ul>
-							<li>JavaScript</li>
-							<li>React js</li>
+							<li>Html/Css</li>
+							<li>Bootstrap</li>
+							<li>Javascript</li>
+							<li>React</li>
 							<li>Next js</li>
-							<li>Gulp js</li>
 						</ul>
 
 						<ul>
-							<li>HTML/CSS</li>
-							<li>Sass</li>
+							<li>Redux js</li>
+							<li>Video js</li>
+							<li>Gulp js</li>
 							<li>Pug js</li>
+							<li>Sass</li>
 						</ul>
 
 					</div>
@@ -106,14 +109,21 @@
 				</div>
 
 				
-				<!-- <div class="social-links">
-					<img id="social_img" src="images/follow.jpg">
-					<h3>Find me on Twitter & Youtube</h3>
+				<div class="soft-skills">
 
-					<a target="_blank" href="https://www.youtube.com/c/dennisivy">YouTube: @DennisIvy</a>
-					<br>
-					<a target="_blank" href="https://twitter.com/dennisivy11">Twitter: @DennisIvy11</a>
-				</div> -->
+					<h3>Soft Skills and Features</h3>
+
+					<p>I can adjust the price for cheap on freelancer.com to give me a good rating after I finish your project.</p>
+					<p>I'm proactive and ask questions.</p>
+					<p>I exhibit good communication skills.</p>
+					<p>I can withstand constructive criticism.</p>
+					<p>I'm a motivated individual.</p>
+					<p>I have high standards for quality.</p>
+					<p>I have high standards for quality.</p>
+					<p>I provide a deadline for the completion of the project.</p>
+					<p>I'm available for the long term.</p>
+					<p>I follow directions.</p>
+				</div>
 			</div>
 
 		</div>
