Did some changes in post.html

--- a/post.html
+++ b/post.html
@@ -73,8 +73,9 @@
 
 		<h5>Technologies:</h5>
 		<ul>
-			<li>- Pug js</li>
+			<li>- Html</li>
 			<li>- Sass</li>
+			<li>- Pug js</li>
 			<li>- Netlify</li>
 		</ul>
 
@@ -103,9 +104,10 @@
 
 		<h5>Technologies:</h5>
 		<ul>
+			<li>- Html</li>
+			<li>- Sass</li>
 			<li>- React js</li>
 			<li>- Next js</li>
-			<li>- Sass</li>
 			<li>- Rapid API</li>
 			<li>- Bayut API</li>
 		</ul>
@@ -135,10 +137,11 @@
 
 		<h5>Technologies:</h5>
 		<ul>
+			<li>- Html</li>
+			<li>- Sass</li>
 			<li>- React js</li>
 			<li>- Next js</li>
 			<li>- Builder</li>
-			<li>- Sass</li>
 		</ul>
 		
 
